syntax = "proto3";

option go_package = "github.com/iznauy/BTrDB/grpcinterface";

package grpcinterface;

message TestConnectionRequest {
}

message TestConnectionResponse {
    bool success = 1;
}

service BTrDB {
    rpc Insert (InsertRequest) returns (InsertResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc QueryRange (QueryRangeRequest) returns (QueryRangeResponse);
    rpc QueryNearestValue (QueryNearestValueRequest) returns (QueryNearestValueResponse);
}

message RawPoint {
    sfixed64 time = 1;
    double value = 2;
}

message DeleteRequest {
    bytes uuid = 1;
    sfixed64 start = 2;
    sfixed64 end = 3;
}

message DeleteResponse {
    Status status = 1;
}

message InsertRequest {
    bytes uuid = 2;
    repeated RawPoint values = 3;
}

message InsertResponse {
    Status status = 1;
}

message QueryRangeRequest {
    bytes uuid = 1;
    sfixed64 start = 2;
    sfixed64 end = 3;
    uint64 version = 4;
}

message QueryRangeResponse {
    Status status = 1;
    uint64 version = 2;
    repeated RawPoint values = 3;
}

message QueryNearestValueRequest {
    bytes uuid = 1;
    sfixed64 time = 2;
    uint64 version = 3;
    bool backwards = 4;
}

message QueryNearestValueResponse {
    Status status = 1;
    uint64 version = 2;
    RawPoint value = 3;
}

message Status {
    int32 code = 1;
    string msg = 2;
}

